--- a/views/about.ejs
+++ b/views/about.ejs
@@ -54,9 +54,9 @@
 			<!--<div>new line</div>-->
 		</div><br>
 		<div class="aboutText2">
-			Bistro Royal was founded with the goal of providing a gathering place for local and foreign residents and neighbors to enjoy high-quality cuisine and beverages in an artistic and creative setting, as well as serving as a pop-up spot for occasional art exhibitions. <br><br>
+			Bistro Royal was founded with the goal of providing a gathering place for local and foreign residents and neighbors to enjoy high-quality cuisine and beverages in an artistic and creative setting, as well as serving as a cloud kitchen infrastructure to cater the modern Indian palette & needs. <br><br>
 
-			We provide Bistro-inspired international cuisine, top quality organic coffee, and pastries, and our gorgeous terrace is ideal for quick business meetings, lunch, or late-night meals with family and friends. 
+			We provide Bistro-inspired international cuisine, top quality organic coffee, and pastries, and our in-house organic baked goods ideal for quick business meetings, lunch, or late-night snacks with family and friends. 
 		</div>
 	</div>
 
@@ -75,9 +75,9 @@
 			
 		</div><br>
 		<div class="aboutText2">
-			The new Bistro Royale includes a complete renovation of our magnificent terrace and menu, which now includes a larger selection of foods at more affordable prices. <br><br>
+			Bistro Royale was introduced to the General Public during the THE Pandemic. By following the principle of bring a cloud kitchen primarily and with the boom of the food delivery services, we were able to combat the effects of the pandemic which were faced by our contemporaries in the industry. <br><br>
 
-			Bistro Royal was designed to serve as a creative hub for customers, making it ideal for corporate events and after-parties. We cater to all groups by providing a variety of set menus, a la cartes and beverages including a large selection of wines and champagnes. One of the few places in the area with a magnificent bar. 
+			What sets us apart from our peers is also our expert hand on our technology services as well , which helps us run as an independent entity. 
 		</div>
 	</div>
 	<br>
