--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -659,9 +659,10 @@ li input{
     text-transform: uppercase;
 }
 .callUs{
-    font-size:1.5em; 
-    font-family:Monotype Corsiva; 
-    padding:20px; 
+    font-size:1.1em; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /*Monotype Corsiva*/ 
+    padding:28px; 
     text-align:center;
 }
 #login2order{
